# reaction-cut-rust

./: index.html  package.json  vite.config.js
scripts/: install-bins.js
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  live_recorder.rs
src-tauri/src/commands/: submission.rs
src/sections/: BilibiliLoginSection.jsx  SubmissionSection.jsx
